--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Albert Perez</title>
     <link type="text/css" rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/f88d4b308d.js" crossorigin="anonymous"></script>
 </head>
