--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#main">Home</a></li>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#bestport">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <!-- <li><a href="#contact">Contact</a></li> --->
             </ul>
         </nav>
 
