--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#main">Home</a></li>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#bestport">Portfolio</a></li>
-                <!-- <li><a href="#contact">Contact</a></li> --->
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
 
@@ -27,7 +27,7 @@
             <h1 class="title"> <span class="first-name">Albert</span> Perez: Data, Software, Business</h1>
             <p class="information"> I am an aspiring Business / Data Analyst currently located in Seattle. I specialize in
                 building applications, websites, and anything that inspires me.</p>
-            <a href="#" class="resume-download">Resume</a>
+            <!-- <a href="#" class="resume-download">Resume</a> -->
         </div>
 
         <div class="social-media-icons">
