--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@ My favorite OS: Linux
                     <a href="https://github.com/albert3rd/Color-Palette-Generator">The objective of this project is to make it easier for artists to create color pallets from any image.Users can add any image from their local hard drive. Python will automatically find the colors in the image using the colorgram package. Users will be able to download the image and place it in their art programs, such as Adobe, Paint, Krita, or Toon Boom for easy access.</a>
                 </div>
             </div>
+            <div class="card">
+                <div class="card-img">
+                    <div class="card-project-name">AudiYou</div>
+                    <img src="./AudiYou-Proj.png" alt="AudiYou">
+                </div>
+                <div class="card-text">
+                    <a href="https://github.com/albert3rd/Color-Palette-Generator">This project is a music sharing social media site that allows users to upload their favorie audio clips that correlate to themselves.</a>
+                </div>
+            </div>
         </div>
 
     </section>
