--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ My favorite OS: Linux
             <div class="card">
                 <div class="card-img">
                     <div class="card-project-name">AudiYou</div>
-                    <img src="./AudiYou-Proj.png" alt="AudiYou">
+                    <img src="./portfolio-files/AudiYou-Proj.png" alt="AudiYou">
                 </div>
                 <div class="card-text">
                     <a href="https://github.com/albert3rd/Color-Palette-Generator">This project is a music sharing social media site that allows users to upload their favorie audio clips that correlate to themselves.</a>
