--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ My favorite OS: Linux
                     <img src="./portfolio-files/AudiYou-Proj.png" alt="AudiYou">
                 </div>
                 <div class="card-text">
-                    <a href="https://github.com/albert3rd/Color-Palette-Generator">This project is a music sharing social media site that allows users to upload their favorie audio clips that correlate to themselves.</a>
+                    <a href="https://github.com/albert3rd/AudiYou">This project is a music sharing social media site that allows users to upload their favorie audio clips that correlate to themselves.</a>
                 </div>
             </div>
         </div>
