--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@ My favorite OS: Linux
                     <a href="https://github.com/albert3rd/AudiYou">This project is a music sharing social media site that allows users to upload their favorie audio clips that correlate to themselves.</a>
                 </div>
             </div>
+            <div class="card">
+                <div class="card-img">
+                    <div class="card-project-name">Airline Data Project</div>
+                    <img src="./portfolio-files/flight_project.png" alt="AudiYou">
+                </div>
+                <div class="card-text">
+                    <a href="https://github.com/albert3rd/main_portfolio_website/blob/main/data_projects/airline_markdown.html">This is a Airline Data Exploratory Analysis Project based on lab 2 from Duke University's Introduction to Probability and Data with R course. I wanted to stretch the analytics to two other states and analyze the differences between those with a touch of my own creativitiy.</a>
+                </div>
+            </div>
         </div>
 
     </section>
@@ -108,7 +117,7 @@ My favorite OS: Linux
             <p>Albert Perez</p>
             <a href="wheresthebert@gmail.com">wheresthebert@gmail.com</a>
         </div>
-        <div class ="footer2">
+        <div class ="social-media-icons">
             <a href="https://www.instagram.com/wheresthebert/"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/atpcodeio/"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/albert3rd"><i class="fab fa-github"></i></a>
