--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ My favorite OS: Linux
                     <img src="./portfolio-files/flight_project.png" alt="AudiYou">
                 </div>
                 <div class="card-text">
-                    <a href="https://github.com/albert3rd/main_portfolio_website/blob/main/data_projects/airline_markdown.html">This is a Airline Data Exploratory Analysis Project based on lab 2 from Duke University's Introduction to Probability and Data with R course. I wanted to stretch the analytics to two other states and analyze the differences between those with a touch of my own creativitiy.</a>
+                    <a href="./data_projects/airline_markdown.html">This is a Airline Data Exploratory Analysis Project based on lab 2 from Duke University's Introduction to Probability and Data with R course. I wanted to stretch the analytics to two other states and analyze the differences between those with a touch of my own creativitiy.</a>
                 </div>
             </div>
         </div>
