--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ My favorite OS: Linux
             <p>Albert Perez</p>
             <a href="wheresthebert@gmail.com">wheresthebert@gmail.com</a>
         </div>
-        <div class ="social-media-icons">
+        <div class ="footer2">
             <a href="https://www.instagram.com/wheresthebert/"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/atpcodeio/"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/albert3rd"><i class="fab fa-github"></i></a>
