--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@ My favorite OS: Linux
                     <a href="./data_projects/airline_markdown.html">This is a Airline Data Exploratory Analysis Project based on lab 2 from Duke University's Introduction to Probability and Data with R course. I wanted to stretch the analytics to two other states and analyze the differences between those with a touch of my own creativitiy.</a>
                 </div>
             </div>
+            <div class="card">
+                <div class="card-img">
+                    <div class="card-project-name">Movie Budget Linear Regression</div>
+                    <img src="./portfolio-files/Color-Palette-Gen.png" alt="AudiYou">
+                </div>
+                <div class="card-text">
+                    <a href="https://github.com/albert3rd/Color-Palette-Generator">This project focuses on the relationship between worldwide gross and movie spending using SkiKit Learn</a>
+                </div>
+            </div>
         </div>
 
     </section>
