--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="home" id="home">
             <h5>My name is:</h5>
             <h1 class="title"> <span class="first-name">Albert</span> Perez: Data, Security, Software, Management</h1>
-            <p class="information"> I am an aspiring Business / Data Analyst currently located in Seattle. I specialize in
+            <p class="information"> I am an aspiring Data Analyst/ Scientist currently located in Seattle. I specialize in
                 building applications, websites, and anything that inspires me.</p>
             <!-- <a href="#" class="resume-download">Resume</a> -->
         </div>
