--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ My favorite OS: Linux
                     <img src="./portfolio-files/linegar.png" alt="AudiYou">
                 </div>
                 <div class="card-text">
-                    <a href="https://github.com/albert3rd/linear_reg_movies">This project focuses on the relationship between worldwide gross and movie spending using SkiKit Learn</a>
+                    <a href="https://github.com/albert3rd/linear_reg_movies/blob/main/Prod%20Budget%20v%20WorldwideGross.ipynb">This project focuses on the relationship between worldwide gross and movie spending using SkiKit Learn</a>
                 </div>
             </div>
         </div>
