--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- header -->
     <section class="main" id="main">
         <nav>
-            <a href="#" class="logo"><img src="./portfolio-files/web.png" alt="logo"></a>
+            <a href="#" class="logo"><img src="./portfolio-files/logo copy.png" alt="logo"></a>
             <ul class="menu-bar">
                 <li><a href="#main">Home</a></li>
                 <li><a href="#about">About Me</a></li>
